--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <title>Git特別講義-2</title>
 </head>
 <body>
-  <h1><a href="">Gitの練習</a></h1>  
+  <h1><a href="">Gitの練習</a></h1>
+
+  <section>
+    <h2>使用したGitコマンド</h2>
+    <ul>
+      <li>git branch</li>
+      <li>git checkout</li>
+      <li>git merge</li>
+    </ul>
+  </section>
 </body>
 </html>
